# ChangeLog for dev-libs/libusb
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/libusb/ChangeLog,v 1.79 2008/05/11 02:28:05 solar Exp $

*libusb-0.1.12-r2 (11 May 2008)

  11 May 2008; <solar@gentoo.org> +files/libusb-0.1.12-nocpp.patch,
  +libusb-0.1.12-r2.ebuild:
  - snag cross compile fix from buildroot

  20 Apr 2008; Mike Frysinger <vapier@gentoo.org> libusb-0.1.12-r1.ebuild:
  Fixup autotools #213800 by Alessandro Guido.

  06 Oct 2007; Tom Gall <tgall@gentoo.org> libusb-0.1.12-r1.ebuild:
  stable on ppc64 bug #193891

  03 Oct 2007; Christoph Mende <angelos@gentoo.org> libusb-0.1.12-r1.ebuild:
  Stable on amd64 wrt bug #193891

  28 Sep 2007; nixnut <nixnut@gentoo.org> libusb-0.1.12-r1.ebuild:
  Stable on ppc wrt bug 193891

  28 Sep 2007; Joshua Kinard <kumba@gentoo.org> libusb-0.1.12-r1.ebuild:
  Stable on mips, per #193891.

  27 Sep 2007; Jeroen Roovers <jer@gentoo.org> libusb-0.1.12-r1.ebuild:
  Stable for HPPA (bug #193891).

  27 Sep 2007; Raúl Porcel <armin76@gentoo.org> libusb-0.1.12-r1.ebuild:
  alpha/ia64/sparc/x86 stable wrt #193891

  30 Aug 2007; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing liquidx from metadata due to his retirement (see #171155 for
  reference).

  12 May 2007; Joshua Kinard <kumba@gentoo.org> libusb-0.1.12.ebuild:
  Stable on mips.

  11 Apr 2007; Robin H. Johnson <robbat2@gentoo.org> metadata.xml,
  libusb-0.1.12.ebuild, libusb-0.1.12-r1.ebuild:
  Fix documentation build process. Add myself to metadata.xml

  10 Apr 2007; Robin H. Johnson <robbat2@gentoo.org>
  -files/0.1.10a-fbsd.patch, -files/libusb-0.1.8-amd64-fPIC.patch,
  -libusb-0.1.8.ebuild, -libusb-0.1.10a.ebuild:
  Clean up old versions and patches.

*libusb-0.1.12-r1 (10 Apr 2007)

  10 Apr 2007; Robin H. Johnson <robbat2@gentoo.org>
  +libusb-0.1.12-r1.ebuild:
  Bug #103132 - move libusb to /lib for usage with UPS and other system
  devices when /usr is a seperate partition.
